--- a/src/main/resources/assets/extrapieces/lang/en_us.json
+++ b/src/main/resources/assets/extrapieces/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.extrapieces.stairs": "Extra Pieces: Stairs",
+  "itemGroup.extrapieces.stair": "Extra Pieces: Stairs",
   "itemGroup.extrapieces.slab": "Extra Pieces: Slabs",
   "itemGroup.extrapieces.siding": "Extra Pieces: Sidings",
   "itemGroup.extrapieces.wall": "Extra Pieces: Walls",
